tests/snapshots/raptorq_encoder_stability__encoder_k1000_seed_cafebabe.snap
---
source: tests/raptorq_encoder_stability.rs
assertion_line: 137
expression: output
---
EncoderOutput {
    config: EncoderTestCase {
        k: 1000,
        symbol_size: 256,
        seed: 3405691582,
        repair_count: 15,
    },
    source_symbols_hash: "3fbaeb728070988f",
    repair_symbols: [
        RepairSymbolData {
            esi: 1000,
            symbol_data_hex: "0ea2bd7c6496e7923ab17ffdf600d25e55ff73211ef920fd537b580565db2295af6f61cc8d1008649b2f589ece91d5362d01f167a3d89363a35d4011208c843d5a1527a83eef111a7ec3c18b93f593eb03ddff1d6456c9746ca892522dddb6593d09eb6d4f427e66c27b44b139f728d6b804a57808551c7efcb0f91ce05841bcd07c63a2ba48394ce46fa12328de0c808b21adffc027fe238da586dbbb05fc4b71b1bf1253ced6ba45f18640104f0be8f3df2fb97d064dbd7d839ecffe525ae384cbf976e031cfc4a01d1f554d2b4d35dd0321c3ba8817aab2764c8cf3036887e3d735b3919ca0b81ca59a6fe729f60866da7ba6d68bc2a0226e27c23e869f62",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1001,
            symbol_data_hex: "a8a04babc6c67c6daeb4c63016689a3b1e507874939427191f2404a3ffd9a6058e496cd365d92772471815742eb7ee70f1880d4f484f4752ca974878c3eecf9af6f42e55e03a0f3c280021d9201845c2fdede3e1664d186d16f3d06022eeb4b7a21bd915a79cd314b5241b5d3a566dd764c2d0c542dd507452f417a48d39e9b81810fb1b7676ccdd1e047680a6d82a8baee0c8c4232497a9af94b4134f6916b53ef9dc63d56997c2f7a8a5c49e075ec04138bdfff8fff7e27a27f8c8735e7f2a46449ee5508abf8c98b0916990a8f5724d5d5351d6fda8dda64360d0925e040712ab69a5172c63a40594abed8ae6dd67d4726075f26de0c4e244a7143d895908",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1002,
            symbol_data_hex: "bc1de9dc88a6a5b25b7a882bced68f7e2f568358c9f835fb6c84038735dfb0dfee3f52c3e8824022207c27641370ba2de197492dd10efedf03208842308a8cf7b6fe0dc621ac538498a512df07d60103459e821a0045bd583ff3d774c4621421d64ec81d614358746c3531d5c09e1b8cb3c9d7d58bdae3964bcccb549aa1a816e647b386d2fcffe80120d271948cd524750cd90293a26fa136de59dd6f85ea85b4650899b2d81a787a267d3e492ae077bbcd13778b54a485597ad2186ad0d6adeca4579c7bf609dec2ff48855d8c5b591fc4d8405a1fe70265a98d2e9e384e7b8c1492473b19022e366f6b8f9ac441d6e9938d8fd180b9cc1196910ec0fbf24c",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1003,
            symbol_data_hex: "01811af72542a95b4f1a625aba696b399bb6c68da14bf0c47e57db7e5fb8eb3e9e43c0ba19d93ab68e679049627e636f1045d7a3baf971016032e246063acb17bc7fb121c94dafc90959c853b5c6f4305cf308905a6cc563df08c3b12fd30e39a3a856e294fe77798fd356d6793f1c69184a07b7ed4506c210e2a931a52c227a72f269845631da283c691129c91a184ae8c5b5fed23883b70d24a80d2ccb984ded30b3c96aaa49c5fd14e33a110d101c6336a4d0c98a0272134191357549b864cf0cc252ba3edcba7a2abb20c6b587432f807be3291fb610ac7bb0c25ca07d4ad0db2591e78d040afca025a50a4c6f1a6b3974c49e3675b16391da42d65f5109",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1004,
            symbol_data_hex: "63e58d4cdcee22953562879723324396337429b5c5ced02e9918db97451dcdc3735c222b14b62b24ae49c4a1e818a32eeb47a60a59dc9556955ea3595fb1671c9fc3cb4f723eb90210b9004212464945239f5052508262076be24f17e3c2098997162f39aa826c74c757a6762a5f255e1e9b41ae2203722a3b9046373e3f96b652d4bc7deddf13a40453b6a6120372a702451884f4ffe11fa829eaa6742cfcf2426d131a25871a159f78f590d929921fda76973b68eda467a46f92686e80562daef2fa7e430f8833218831732377787412ae616361b353365ad37e26d2f338b8a6271e089bb35d45f66697471b6e146f2faa709f1332431b0aa177060f0ea787",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1005,
            symbol_data_hex: "3bf573d56c3a16e7c2b451fba4903642d891e603213c2e0f7f0810c3463c44f182219828d3bfc9e870e3d574b9d179fcaffcc3cfc0c9f27b5233ee1a81e59f6bc36e6e82e2b0abf104062269a422ccba94d26c2da90fd8ae117b02c595562cf63ea9595f0c5c22ef65dff219c170c16a828e656fd179afaa794dbe7412bb70704b8503a51c4a6697b2c4218bd4e04632a8e19673514c5e7f0f7860b3364c3481f251e858a3cfb9980093a504c9a1098cdf8cb3bfb0b9820b22439e6af195ef1bb31e1ef292c0db8174765219d452bccae4a21c5dd97fa8de610b72b5e5265c864ed9292f7c2c529f15af8269b100b11af2fe151fa109dfda093dce0462cb0000",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1006,
            symbol_data_hex: "9ef98ad1e26cddfe8d17bdf6f9f4bbe8ec27ac7bdba99fd7c8066c5a995bcd03a1eed9e9dd48be48b001d703224f96b7bf9828cd9878a1af75759328b7028bd745eddc97425193b5a6b78ab3c0e989725dcc72aff95aad18adef4d86f01ed25072d15e7cc85e27dc573c576a4ca4831aa85406af9023a6931cc5c5d08c5d9ccb0d6a194271ff4e6d1e842e656a67287b7fb43fe8483a0c445b95ffc90ac85e90327d4a7a4edb2ddb23924490b1dc05242c0bbb5e0beb323ce6e600bb24911844d67e4f04d1c2002635241920537a1ae1ce5fe13c6ac93e8b3e7cde15638d41c3e142cdef5bcdb44fc4afc4f9df3710893bc7953c03b035008f5656431fce0f58",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1007,
            symbol_data_hex: "26d4a71d75a7b60bec499f4ee7cfb1153915f08e3e2cbadca602b311473ee35edb68b8a069d795bc8b948712fc23fc8cb7065b98c905316980e7a68df7d129bd39e8c9db1fddfa4a57620bc80950bea38aee00fbe06172323f62663e2f7349eb72a1a7d6a830794a045c82b1df3df0ce810b4417e16aa06630698befdcd56c2802f083395183922fc86dbb6ac3eb95311d31d4aa1a089ef882269735631ac77aff4c9c844df3b198afb0a336d807d8a893227fbced21154da4c382a9d3f50d991dccedff3bf9de6e73462fec2d749a87aeca24dfc44556161b46421a0b576dcf568583f28c145d6e2078a695fb19d4eaa52f6033c54e8442144dafcbf8f1480c",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1008,
            symbol_data_hex: "aff37f68ee64d03a7cd8f19d50db00644d4563ad91722c12ad2e7484be48819136bcadb67a7e1e256c0ccb22deca4251ae46ce646a7e3c8f4d5f9e5e33f96d3da9db4cf2f1cdd1f60b4b9c89faa156f258105d1bc87b07ea95206e12b923ae9544134703ce7bb8f0d67309c40ff7a7b19da74e4ce892f045d842c25c8d99f5394a169a8d0b8135df993d1478b53ee581a8a086487497c9f748cb91615bad6474d35948539f9bfbc089e92ec73b2fa7b44ba32b818f9bd96aa8ba7bbbd61c88d84c3ea91714283413eeae796c1f44b317bdf5b8fe2d9ee20f70c58bf75cc64b70a1f6a2e62b9e5d153396ec21ea1242547842aba90d7715a03da727b9687c10dc",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1009,
            symbol_data_hex: "6a610f23972fcfa21c91496a71d920c455b048deac0adcaaf7aba42a12a800190d10235b127a2f76f71b16c90771a38a54c1da9adf7a49cb2782476dbdeda2a39912305e134cb1368ec15e5181cf5876e380efc1dfe3b31581dac91d4723836b4b572f8ac2f3e0bf26bbf1ee0bac6ca9ff110e687daab17445a008dbbac9b1860e056b47f34babc678f52d0e15bd44a031d42cbac86eb8ce93cfc04e76cc647d6974473f761e4b12937f72ad6315c7ee30a5befebb1e2daf43e62309d989c6c7fd76543a7728d552eaa53a35e5ab3c1287e48ba5bb87d771e5bead792347e70f2f334beea69784db42df958a6fc808cd9b756a0c19ced51021c46cbfdeadd5e2",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1010,
            symbol_data_hex: "f429a973356f64e5514ed28a0bbd689fa70bbc84c159f3088f662ef4ffbe18e7d2cb11705ad4064cdf74f2ec234311f679587b91dd6efd1299e13e6b89b0779e399985de3bb937916de1062fed12a92750d225b2a0fe2fe4c9cb4c5739b6279cc0146260981c4c2a13289bf598d2ea9680de2bf3d977c712fcf144916089efd667ba3ae0a6fcf776c2dd4119982efb0c34982f1752ca609b1cf5bd676c2d8b74415882e3c94795df4ce7617fb0d08265eacbe8024efd6e810a72adf81a23e40daa0a164da82aa402fe7295bc7e813ab4c341b621336dbc775a58dfc4aa25b40f5387f1f30b8fdfb980bb08660b417905134db8604ae454816f62d702f31a7c45",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1011,
            symbol_data_hex: "96dbd72a8819d8c0cd2e97dfb92c88cb83472b923660ca5224a4b16e0f5d935ed593c92c06f8927ad720f70144bcb263040ccba890aa66bc9742807f6811c31ac127db24b122ab95b8209a8842c0fe02cd0c4de15d94fd2131b6b43992a830bb4b9703da6b6351a5f3ca3e8e78a9fa3e450415f54b40ce4d4a1e27a3dc4713cbe0ada15cfe6faeb6bb58e1a9cf5afebdf5315de44016bc2452d2c718792be528a3e5bf5a708ee40ca156817732cac415727abddee6dc10cae134f6091e67b56cb751ad52c754dde3ce56ecfe34b68874bb7a3b972be28b5747c0c24fe4de46cd3de175ac1d1527d385bc48f80edf8c48337263833d36b83b3c6851d5aa3165bd",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1012,
            symbol_data_hex: "e358fbd8a12e21a9fd4f7996eb6eeba0150e08d8cdd2ba17fe0a17acc78057b3e0ea1c7beb4a2493c4792924ab2a07cbfc6a86880fb27606c629234a756a42f6a4283ea729d74e8fe85d7a35e5ca385d082297ff3c7b48bff0d24b92f2d3fb7a4d21c83de58a92eb718dcbbd93f8c4bb604926fd5a76af0102c8f496ad3a857770cb684b32bdb23a6edcea0578fd7833869d9b4b5e4129846d99843f5413c42073798fe878d9b70057eabab738b994586ff9151b9c21e59555bab0d9e6f9d16537bbad34ba44dd1c7bcee9a67659abce9bb1046cafe8db2c6341d801614068e9deb25bae76190178e21e582e006b5728f3dab56ec9e53c92915b67053ea916e4",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1013,
            symbol_data_hex: "7769e908a3776c2e5f4a2d70938b8659b90c566c092780c26bd4c78fced393cdf71971f5689fc04ee52c33e005d03374b252fcc6793b3b535320de6a0f5c890d45847311ee6a0305a9c593123cfdbf5b413f00e82968c069b650f38f1839c69f5154fe5a8b9bea2a288ec24c590c8dca341134777804d7556cbc8308d4a28ecfabb535d47fabb0f28396f1ac4f575a8565d08ab0d5fb5c1eb7081b53120f4f112bc5ad29b4431c9239f0ef3cd90cefa86e8e201aa5e7e78f8ffc02b6d38055d19958afcd32b6dfd975194fcee02163879de3dc34f5b41cb56a8c2f53c4e51a438d882286574736f6f4521e9085d05116e8cde8aba4d80b89b0605fd4087e5213",
            symbol_length: 256,
        },
        RepairSymbolData {
            esi: 1014,
            symbol_data_hex: "0dd4301a3c7c733a1b60454b1185cccc2a37de61b270214a8b71fee6d1241f970192b2236501732747336cb69ce4db634610d5326b9996446902286ba27d8378bd5aec114b6a15f3a055384c22c0c28c053cdf612efbd61fc9b08e2dc30b272be8a3b292e3f8ae7cad3a07c74c1dc0a3a5c8826983b71eb533e07ce10c3af55f5980644e6828276e4f34111f45d198987e638a35e624751edf25aab285704bc355c6e67731552773136738e2c8b08f37124481663fcdc2103d567c3ff629d72ce90eb8451f3e41a7f4016c18769496d851688b357aaf824b9de4da79975f737fbcf7e6c6b7acfa28f96e5393184994f7f19cd63dd7e34ae167b428b5586ea10b",
            symbol_length: 256,
        },
    ],
    params_summary: {
        "h": 10,
        "k": 1000,
        "k_prime": 1002,
        "l": 1071,
        "s": 59,
        "w": 1021,
    },
}
