tests/snapshots/raptorq_encoder_stability__encoder_rfc6330_parameters.snap
---
source: tests/raptorq_encoder_stability.rs
assertion_line: 211
expression: all_params
---
{
    "k1000_s256": {
        "h": 10,
        "k": 1000,
        "k_prime": 1002,
        "l": 1071,
        "s": 59,
        "w": 1021,
    },
    "k100_s128": {
        "h": 10,
        "k": 100,
        "k_prime": 101,
        "l": 128,
        "s": 17,
        "w": 113,
    },
    "k1024_s1316": {
        "h": 10,
        "k": 1024,
        "k_prime": 1032,
        "l": 1101,
        "s": 59,
        "w": 1051,
    },
    "k10_s64": {
        "h": 10,
        "k": 10,
        "k_prime": 10,
        "l": 27,
        "s": 7,
        "w": 17,
    },
    "k256_s1316": {
        "h": 10,
        "k": 256,
        "k_prime": 257,
        "l": 296,
        "s": 29,
        "w": 271,
    },
}
